[tool.poetry]
name = "datastruct"
version = "0.1.0"
description = ""
authors = ["user <kosareva.karina2013@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
